; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/other/extr_ak4114.c_reg_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/other/extr_ak4114.c_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ak4114 = type { i8 (i32, i8)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (%struct.ak4114*, i8)* @reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @reg_read(%struct.ak4114* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.ak4114*, align 8
  %4 = alloca i8, align 1
  store %struct.ak4114* %0, %struct.ak4114** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.ak4114*, %struct.ak4114** %3, align 8
  %6 = getelementptr inbounds %struct.ak4114, %struct.ak4114* %5, i32 0, i32 0
  %7 = load i8 (i32, i8)*, i8 (i32, i8)** %6, align 8
  %8 = load %struct.ak4114*, %struct.ak4114** %3, align 8
  %9 = getelementptr inbounds %struct.ak4114, %struct.ak4114* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load i8, i8* %4, align 1
  %12 = call zeroext i8 %7(i32 %10, i8 zeroext %11)
  ret i8 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
